--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.gms:play-services:6.1.71'
+    compile files('FlurryAnalytics-4.2.0.jar')
 }
